assets/css/main.css
@import 'tailwindcss';
@import './transitions.css';
@plugin "fluid-tailwindcss" {
  minviewport: 360;
  maxviewport: 1280;
}

:root {
  --color-bg-loading-1: #242124;
  --color-bg-loading-2: #1c2032;
  --color-bg-loading-3: #2b3e5f;
  --color-bg-loading-4: #627ea4;
  --color-bg-loading-5: #a4bbd6;
  --color-bg-loading-6: #c2d6e6;
  --color-bg-loading-7: #ffffff;

  --color-gradient-red: #ffc1c3;
  --color-gradient-pink: #ffb8e4;
  --color-gradient-blue: #a2ccfd;
  --color-gradient-green: #c6ffe9;
  --color-gradient-yellow: #fdedb3;
  --color-gradient-violet: #decafe;
  --color-gradient-orange: #ffd8b8;
  --color-gradient-cyan: #bbf0f3;
  --color-gradient-lime: #e6facd;
}

@theme {
  --font-sans: 'Satoshi', ui-sans-serif, system-ui, sans-serif;
  --font-serif: 'PP Eiko', serif;
  --font-epilogue: 'Epilogue', sans-serif;
  --color-primary: #0b1018;
  --text-title: 1.75rem;
  --breakpoint-xs: 430px;

  /* Custom typography bounds for fluid sizes */
  --text-h1-min: 2.5rem;
  --text-h1-max: 5rem;
  --text-display-min: 2.9rem;
  --text-display-max: 7.5rem;

  --text-intro-min: 1.65rem;
  --text-intro-max: 2.75rem;
  --text-footer-min: 2.5rem;
  --text-footer-max: 10rem;
  --text-choice-min: 1.0665rem;
}

/* Satoshi Font */
@font-face {
  font-family: 'Satoshi';
  src: url('~/assets/fonts/Satoshi-Regular.woff2') format('woff2');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

/* PP Eiko Font */
@font-face {
  font-family: 'PP Eiko';
  src: url('~/assets/fonts/PPEiko-ItalicLight.woff2') format('woff2');
  font-weight: 300;
  font-style: italic;
  font-display: swap;
}

/* Custom Cursor */
.custom-cursor {
  display: none;
}

@media (hover: hover) and (pointer: fine) {
  .custom-cursor {
    display: block;
  }

  html,
  body,
  * {
    cursor: none !important;
  }

  body {
    @apply font-sans;
  }
}

